[package]
name = "churchdbws"
version = "0.1.0"
authors = ["Mark Doh <mark.elorm.doh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1"
actix-service = "1.0.0"
actix-cors = "0.3.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["mysql","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.13.0"
env_logger = "0.8.3"
